attempt to fix img on ios

--- a/css/styles.css
+++ b/css/styles.css
@@ -186,7 +186,7 @@ html, body{
 @media screen and (max-width: 600px) {
 
   .blocks{
-    background-attachment: scroll;
+    background: scroll;
   }
 
   .last-block p{
